--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.4.2",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.4.2",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.3",
+    "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
     "start": "react-scripts start",
